# Deprecated-VesselView

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  NOTICE.md  README.md
Applications/App/: CMakeLists.txt  Main.cxx  qAppLayoutViewFactory.cxx  qAppLayoutViewFactory.h  qAppRecentFile.cxx  qAppRecentFile.h  qAppRecentFilesModel.cxx  qAppRecentFilesModel.h  qAppRecentFilesProxyFilter.cxx  qAppRecentFilesProxyFilter.h  qAppWelcomeScreen.cxx  qAppWelcomeScreen.h  qSlicerAppAboutDialog.cxx  qSlicerAppMainWindow.cxx  qSlicerAppMainWindow.h  qSlicerAppMainWindow_p.h
Applications/App/Resources/: App.qrc
Applications/App/Resources/QML/: Button.qml  VerticalListViewWithButtons.qml  WelcomeListDelegate.qml  WelcomeListModel.qml  WelcomeScreen.qml
Applications/App/Resources/Settings/: VesselViewDefaultSettings.ini
Applications/App/Resources/UI/: qSlicerAppAboutDialog.ui  qSlicerAppMainWindow.ui
Applications/App/StylePlugins/: CMakeLists.txt  qVesselViewStyle.cxx  qVesselViewStyle.h  qVesselViewStylePlugin.cxx  qVesselViewStylePlugin.h
Applications/App/Testing/Cpp/: CMakeLists.txt
Applications/App/Testing/Data/: SinusTube_test0.tre  SinusTube_test1.tre  SinusTube_test2.tre  SinusTube_test3.tre  StraightTube_test0.tre  StraightTube_test1.tre  StraightTube_test2.tre
Applications/App/Testing/Python/: CMakeLists.txt  FailTests.py  SlicerTestRecentFilesTests.py  SpatialObjectsModuleTests.py  TortuosityLogicTests.py  WelcomeModuleTests.py
CMake/: ApplicationConfig.cmake.in  ConfigureFileMultipleTimes.cmake  DashboardDriver.cmake  DashboardTemplate.cmake  ExternalProjectDependency.cmake  OSXVariables.cmake  UseApplication.cmake.in
CMake/Superbuild/: CMakeLists.txt  External_Gutenberg.cmake  External_LIBSVM.cmake  External_Prometheus.cmake  External_PrometheusLibs.cmake  External_Slicer.cmake  External_TubeTK.cmake  External_VesselView.cmake
Modules/Loadable/: CMakeLists.txt
Modules/Loadable/InteractiveTubesToTree/: CMakeLists.txt  qSlicerInteractiveTubesToTreeModule.cxx  qSlicerInteractiveTubesToTreeModule.h  qSlicerInteractiveTubesToTreeModuleWidget.cxx  qSlicerInteractiveTubesToTreeModuleWidget.h
Modules/Loadable/InteractiveTubesToTree/Logic/: CMakeLists.txt  vtkSlicerInteractiveTubesToTreeLogic.cxx  vtkSlicerInteractiveTubesToTreeLogic.h
Modules/Loadable/InteractiveTubesToTree/Resources/: qSlicerInteractiveTubesToTreeModule.qrc
Modules/Loadable/InteractiveTubesToTree/Resources/UI/: qSlicerInteractiveTubesToTreeFooBarWidget.ui  qSlicerInteractiveTubesToTreeModuleWidget.ui  qSlicerInteractiveTubesToTreeTableWidget.ui
Modules/Loadable/InteractiveTubesToTree/Widgets/: CMakeLists.txt  qSlicerInteractiveTubesToTreeFooBarWidget.cxx  qSlicerInteractiveTubesToTreeFooBarWidget.h  qSlicerInteractiveTubesToTreeTableWidget.cxx  qSlicerInteractiveTubesToTreeTableWidget.h
Modules/Loadable/TortuosityModule/: CMakeLists.txt
Modules/Loadable/TortuosityModule/Logic/: CMakeLists.txt  vtkSlicerTortuosityLogic.cxx  vtkSlicerTortuosityLogic.h
Modules/Loadable/TortuosityModule/Widgets/: CMakeLists.txt  qSlicerTortuosityModuleWidget.cxx  qSlicerTortuosityModuleWidget.h
Modules/Loadable/TortuosityModule/Widgets/Resources/UI/: qSlicerTortuosityModule.ui
Modules/Loadable/VesselEditor/: CMakeLists.txt  qSlicerVesselEditorModule.cxx  qSlicerVesselEditorModule.h  qSlicerVesselEditorModuleWidget.cxx  qSlicerVesselEditorModuleWidget.h
Modules/Loadable/VesselEditor/Logic/: vtkSlicerVesselEditorLogic.cxx  vtkSlicerVesselEditorLogic.h
Modules/Loadable/VesselEditor/Resources/: qSlicerVesselEditorModule.qrc
Modules/Loadable/VesselEditor/Resources/UI/: qSlicerVesselEditorFooBarWidget.ui  qSlicerVesselEditorModuleWidget.ui  qSlicerVesselEditorModuleWidget.ui.autosave
Modules/Loadable/VesselEditor/Widgets/: CMakeLists.txt  qSlicerVesselEditorFooBarWidget.cxx  qSlicerVesselEditorFooBarWidget.h
Modules/Scripted/: CMakeLists.txt
Modules/Scripted/InteractiveSegmentTubes/: CMakeLists.txt  InteractiveSegmentTubes.py
Modules/Scripted/InteractiveSegmentTubes/InteractiveSegmentTubesLogic/: InteractiveSegmentTubesLogic.py  SegmentTubesLogic.py  __init__.py
Modules/Scripted/InteractiveSegmentTubes/InteractiveSegmentTubesWidget/: InteractiveSegmentTubesWidget.py  __init__.py
Modules/Scripted/InteractiveSegmentTubes/Resources/Icons/: README
Modules/Scripted/InteractiveSegmentTubes/Resources/ParameterFiles/: Default_Parameters.mtp
Modules/Scripted/InteractiveSegmentTubes/Resources/UI/: InteractiveSegmentTubes.ui
Modules/Scripted/VesselDisplay/: CMakeLists.txt  VesselDisplay.py
Modules/Scripted/Welcome/: CMakeLists.txt  Welcome.py
Modules/Scripted/Workflow/: CMakeLists.txt  Workflow.py
Modules/Scripted/Workflow/Resources/: README
Modules/Scripted/Workflow/Resources/Brain_vessels/: ExpertAutomatedRegistration.json  ResampleImage.json  Workflow.json
Modules/Scripted/Workflow/Resources/Heart_vessels/: Workflow.dict  Workflow.json
Modules/Scripted/Workflow/Resources/Liver_vessels/: PDFSegmenterParameters.dict  README  Workflow.json
Modules/Scripted/Workflow/Widgets/: ExtractSeedsStep.py  ExtractSkeletonStep.py  InitialStep.py  LoadDataStep.py  RegisterStep.py  RegisterWidget.py  ResampleStep.py  ResampleWidget.py  SegmentationStep.py  SegmentationWidget.py  VesselEnhancementStep.py  VesselExtractionStep.py  WorkflowStep.py  __init__.py
Modules/Scripted/Workflow/Widgets/Resources/UI/: AdvancedSettingsPanel.ui  ExtractSeedsStep.ui  ExtractSkeletonStep.ui  InitialStep.ui  LoadDataStep.ui  RegisterStep.ui  RegisterWidget.ui  ResampleStep.ui  ResampleWidget.ui  SegmentationStep.ui  SegmentationWidget.ui  VesselEnhancementStep.ui  VesselExtractionStep.ui  ViewsSettingsPanel.ui  WorkflowSettingsPanel.ui
Utilities/Dashboards/: VesselView-DashboardDriver.cmake  VesselView-Kitwares-MacBook-Pro-dashboard.cmake  VesselView-Kitwares-MacBook-Pro-master-nightly.cmake  VesselView-Kitwares-MacBook-Pro.sh  VesselView-errai-dashboard.cmake  VesselView-errai-master-nightly.cmake  VesselView-errai.bat  VesselView-melcor-dashboard.cmake  VesselView-melcor-master-nightly.cmake  VesselView-melcor.sh
